tests/unit-fail-compilation/needsInclude.c.ref
needsInclude.c:2:21: fatal error: include.h: No such file or directory
 #include "include.h"
                     ^
compilation terminated.
Translation failed (config dumped). Run kcc -d needsInclude.c to see commands run.
